# mpc-from-scratch

./: .gitignore  CMakeLists.txt  README.md  notes.txt
include/physics/: -Simulator.h  MassSpringDamper.h  PhysicsObject.h  Renderer.h  Simulator.h
include/utils/: Config.h  Logger.h
src/controllers/: CMakeLists.txt
src/main/: CMakeLists.txt  main.cpp
src/physics/: -Simulator.cpp  CMakeLists.txt  MassSpringDamper.cpp  PhysicsObject.cpp  Renderer.cpp  Simulator.cpp  _Simulator.cpp
src/utils/: CMakeLists.txt  Logger.cpp
src/viz/: plot_states.py
